--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -10,4 +10,4 @@
 * C++ 공부(과제) 시작
 * MFC 공부(과제) 시작
 
-go home! [:house_with_garden:](/)
+## go home! [:house_with_garden:](https://github.com/wnsgml972/midas_log)
