Update Team Rule

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -7,7 +7,14 @@
   * 모니터 신청, RAM 신청
   * 각종 회원가입
   * 개발환경 구성
-* C++ 공부(과제) 시작
-* MFC 공부(과제) 시작
+* C++ 공부
+* MFC 공부
+
+## 09.04
+
+* 자기소개 PPT 발표 준비
+* MFC로 전화번호부 구현
+
+--
 
 ## go home! [:house_with_garden:](https://github.com/wnsgml972/midas_log)
