--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -8,12 +8,15 @@
   * 각종 회원가입
   * 개발환경 구성
 * C++ 공부
-* MFC 공부
 
 ## 09.04
 
 * 자기소개 PPT 발표 준비
-* MFC로 전화번호부 구현
+* MFC 공부
+
+## 09.05
+
+* MFC로 전화번호부 구현 시작
 
 --
 
