--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -1,5 +1,11 @@
 # MIDAS LOG
 
+## go home! [:house_with_garden:](https://github.com/wnsgml972/midas_log)
+
+---
+
+<br/><br/>
+
 ## 09.03
 
 * 적응
@@ -18,6 +24,25 @@
 
 * MFC로 전화번호부 구현 시작
 
---
+### Visual Assist
 
-## go home! [:house_with_garden:](https://github.com/wnsgml972/midas_log)
+``Alt + O``
+  - Header file과 Source file같은 전환~같은 전환
+
+``Alt + G``
+  - 함수의 선언과 구현부를 왔다갔다 함
+
+``Ctrl + G``
+  - 원하는 줄로 이동함
+
+``Alt + Shift + S``
+  - 심볼 찾기
+
+`` Alt+Shift+O``
+   - 파일 찾기
+
+``Alt+M``
+ - 현재 파일의 함수 찾기
+
+``Shift+Alt+F``
+ - Reference 찾기
