--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -38,11 +38,91 @@
 ``Alt + Shift + S``
   - 심볼 찾기
 
-`` Alt+Shift+O``
+`` Alt + Shift + O``
    - 파일 찾기
 
-``Alt+M``
+``Alt + M``
  - 현재 파일의 함수 찾기
 
-``Shift+Alt+F``
+``Shift + Alt + F``
  - Reference 찾기
+
+
+
+## 09.06
+
+* [MFC 전화번호부 완성](https://github.com/wnsgml972/MFCPhoneBook)
+
+### 컴파일 경고는 되도록 모두 잡고 가자
+
+* 필요 없는 컴파일 경고 없애는 방법
+
+<pre>
+#pragma warning(push)
+#pragma warning(disable: 4351)
+#pragma warning(pop)
+</pre>
+
+* 밑에 처럼 하면 Test 경고는 출력이 안 되고, SubTest 경고는 출력된다.
+
+<pre>
+#pragma warning(push)
+#pragma warning(disable: 4351)
+
+class Test
+{
+    int m_ints[10];
+    double m_doubles[10];
+
+public:
+    Test()
+        : m_ints() // C4351
+        , m_doubles() // C4351
+    {
+    }
+};
+
+#pragma warning(pop)
+
+class SubTest : public Test
+{
+    bool bools[10];
+
+public:
+    SubTest()
+        : bools() // C4351
+    {
+    }
+};
+</pre>
+
+### CString <-> string
+
+<pre>
+string CStringToString(CString cstr)
+{
+	char cpResult[200];
+
+#pragma warning(push)
+#pragma warning(disable: 4996)
+	strcpy(cpResult, CT2A(cstr));
+	if (cpResult == NULL)
+	{
+		strcpy(cpResult, "");
+	}
+	cpResult[strlen(cpResult) + 1] = '\0';
+#pragma warning(pop)
+
+	return cpResult;
+}
+
+CString StringToCString(string str)
+{
+	CString strResult;
+
+	strResult = str.c_str();
+	strResult += '\0';
+
+	return strResult;
+}
+</pre>
