[09.07] Add Nesoy Archive

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -126,3 +126,16 @@ CString StringToCString(string str)
 	return strResult;
 }
 </pre>
+
+
+## 09.07
+
+* MFC 인테리어 프로그램 개발
+
+* mday 자기소개 발표!
+
+* 이번 주 마무리
+  * OpenSource 경진대회 휴가 계획 짜기
+  * 밀렸던 자료 정리
+  * 김남윤 교수님께 메일?
+  * 다음 주 할 일 미리 정리
