--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -139,3 +139,9 @@ CString StringToCString(string str)
   * 밀렸던 자료 정리
   * 김남윤 교수님께 메일?
   * 다음 주 할 일 미리 정리
+
+
+
+## 09.10
+
+* MFC 인테리어 프로그램 개발 시작!
