[09.10] MFC 인테리어 프로그램 내용 추가

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -144,4 +144,8 @@ CString StringToCString(string str)
 
 ## 09.10
 
-* MFC 인테리어 프로그램 개발 시작!
+* MFC 인테리어 프로그램 개발 시작
+
+* [단일 문서 기본 틀 생성](http://ryumin13.tistory.com/entry/mfc%EB%A1%9C-%ED%88%B4%EB%A7%8C%EB%93%A4%EA%B8%B0-%EA%B8%B0%EB%B3%B8-%EB%BC%88%EB%8C%80-%EB%A7%8C%EB%93%A4%EA%B8%B0?category=388236) : 진짜 어려움... FormView가 생성이 안 되서 따로 만들어 줘야 함, 만들어진 자료 확인
+
+* View Update
