[09.11] MFC 인테리어 프로그램 내용 추가 1. 프로그램 팁 정리

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -146,6 +146,24 @@ CString StringToCString(string str)
 
 * MFC 인테리어 프로그램 개발 시작
 
+* 먼저 설계부터 하자. MVC 생각하면서 설계하면 좀 편함
+
 * [단일 문서 기본 틀 생성](http://ryumin13.tistory.com/entry/mfc%EB%A1%9C-%ED%88%B4%EB%A7%8C%EB%93%A4%EA%B8%B0-%EA%B8%B0%EB%B3%B8-%EB%BC%88%EB%8C%80-%EB%A7%8C%EB%93%A4%EA%B8%B0?category=388236) : 진짜 어려움... FormView가 생성이 안 되서 따로 만들어 줘야 함, 만들어진 자료 확인
 
-* View Update
+* MVC 패턴에 기반한 기본 틀 완성!
+
+
+
+## 09.11
+
+* [MFC InteriorProgram](https://github.com/wnsgml972/MFC-InteriorProgram) : 첫 커밋,   __Controller의 싱글톤과 FileManager, Main의 define__
+
+* MVC 패턴에 기반한 기본 틀 함수 추가, MVC에 따른 패키징!
+
+* FileManager 다듬기, 어디서든 모듈 형식으로 사용할 수 있게
+
+* SAFE DELETE
+
+<pre>
+#define SAFE_DELETE(p) { if(p) {delete p; p = NULL;} }
+</pre>
