[09.11] Add Tip 뷰클래스 포인터 얻는 법 추가

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -173,3 +173,29 @@ CString StringToCString(string str)
 <pre>
 #define SAFE_DELETE(p) { if(p) {delete p; p = NULL;} }
 </pre>
+
+<pre>
+== SDI의 경우 ===
+
+[ 뷰클래스의 포인터 받기 ]
+1) SDI의 경우
+CMainFrame *pMainFrame = (CMainFrame *)AfxGetMainWnd();
+CTempView *pView = (CTempView *)pMainFrame->GetActiveView();
+
+
+[정리하자면]
+어플리케이션 클래스
+1) CXXXXApp *pAPP = (CXXXXApp *)AfxGetApp();
+
+메인플레임 클래스 얻기
+1) CMainFrame *pMainFrame =(CMainFrame*) AfxGetApp()->m_pMainWnd;
+
+View클래스 얻기
+1) 메인플레임 클래스를 먼저 얻음.
+2) CXXXXView *pView = (CXXXXView *)pMainFrame->GetActiveView();
+
+Document 클래스 얻기
+1) 메인플레임 클래스를 먼저 얻음.
+2) CXXXXDoc *pDoc = (CXXXXDoc *)pMainFrame->GetActiveDocument();
+
+</pre>
