[09.11] Add Function DrawRoom, Select

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -166,7 +166,7 @@ CString StringToCString(string str)
 
 * MVC 패턴에 기반한 기본 틀 함수 추가, MVC에 따른 패키징!
 
-* FileManager 다듬기, 어디서든 모듈 형식으로 사용할 수 있게
+* DrawRoom, Select 구현
 
 * SAFE DELETE
 
@@ -175,6 +175,14 @@ CString StringToCString(string str)
 </pre>
 
 <pre>
+
+☞ 헤더파일 포함 순서.
+#include "stdafx.h"
+#include "Example.h"
+#include "MainFrm.h"
+#include "ExampleDoc.h"
+#include "ExampleView.h"
+
 == SDI의 경우 ===
 
 [ 뷰클래스의 포인터 받기 ]
@@ -198,4 +206,10 @@ Document 클래스 얻기
 1) 메인플레임 클래스를 먼저 얻음.
 2) CXXXXDoc *pDoc = (CXXXXDoc *)pMainFrame->GetActiveDocument();
 
+[실제 프로그램 예시]
+CMainFrame* pFrame = (CMainFrame*)AfxGetMainWnd();  // 프레임 윈도우 포인터 구하고...
+//CInteriorProgramView* pView = (CInteriorProgramView*)pFrame->GetActiveView(); // 활성화된 뷰의 포인터 구한다.
+CInteriorProgramView* pView = (CInteriorProgramView*)pFrame->m_wndSplitter.GetPane(0, 0); // 활성화된 뷰의 포인터 구한다.
+
+pView->RedrawWindow();
 </pre>
