[09.12] 날짜만 추가

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -168,7 +168,7 @@ CString StringToCString(string str)
 
 * DrawRoom, Select 구현
 
-* SAFE DELETE
+* SAFE DELETE, 원하는 뷰 포인터 얻어오기
 
 <pre>
 #define SAFE_DELETE(p) { if(p) {delete p; p = NULL;} }
@@ -213,3 +213,8 @@ CInteriorProgramView* pView = (CInteriorProgramView*)pFrame->m_wndSplitter.GetPa
 
 pView->RedrawWindow();
 </pre>
+
+
+
+
+## 09.12
