[09.12] Issue 1. 80% 해결 1. Move 성공! 2. Update 성공! 3. HowManySeleted 성공! 4. Current Selected 성공! 5. AddShape 미완 6. DeleteShape 미완
* 현재까지 각종 Error 체크 했을 시 오류 없었음!

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -218,3 +218,74 @@ pView->RedrawWindow();
 
 
 ## 09.12
+
+* MFC 환경에서 console에 log 출력하는 법
+
+<pre>
+-> 이것을 stdafx.h의 제일 위에다 넣으면 됨
+
+#ifdef _DEBUG
+#ifdef UNICODE
+#pragma comment(linker, "/entry:wWinMainCRTStartup /subsystem:console")
+#else
+#pragma comment(linker, "/entry:WinMainCRTStartup /subsystem:console")
+#endif
+#endif
+</pre>
+
+__
+
+### 소멸자 virtual, c++의 instanceof인 typeid
+
+- c++에서 virtual을 붙여주게 되면 상속 관계에서 파생 클래스의 함수를 부르게 된다.
+- 상속 관계에서 소멸자에 virtual을 붙여놓지 않는다면, 만약 업캐스팅한 객체는 해당 가리키고 있는 객체의 소멸자를 호출하지 않게된다.
+그러므로 통상적으로 상속관계에 있는 클래스중 제일 상위 클래스의 소멸자에는 보통 virtual을 붙인다.
+
+- 여기에서 하나 문제가 있다. 해당 객체의 type을 알 수 있는 c++의 typeid에서, 업캐스팅한 객체의 타입을 알고 싶었는데
+가리키고 있는 객체의 타입이 아닌 자기 자신만 가리키는 결과가 나왔다. <br/>
+-> 해결방법으로 상위 클래스에 소멸자를 붙여주게 되면 하위 클래스의 소멸자를 호출하여 올바르게 가리키는 객체를 참조하는 결과가 나왔다. 그러므로 typeid를 쓰려면
+
+<pre>
+1. 헤더파일 typeinfo 선언
+2. 상위 클래스의 소멸자에 virtual 선언
+3. typeid(m_CaShape.at(i)) == typeid(DoorShape)
+다음과 같이 비교하면 된다.
+</pre>
+
+
+### Select  (어려움...)
+
+1. 알고리즘
+
+2. 기준 꼭지점을 정해야함
+
+
+### Move  (핵 어려움...)
+
+1. MouseDown 시 선택된 Shape의 기준 꼭지점과 클릭한 point와의 차이점을 구해놓는다.
+
+2. MouseMove에서 구해놓은 차이와 현재 드래그 되는 좌표값을 더해준다!
+
+3. 그 값은 InteriorProgramView를 넘으면 안 된다.
+
+4. 그 외 프로그램 상 각종 예외처리
+
+### 진행상황
+
+__[09.12] Issue 1. 80% 해결__
+
+1. Move 성공!
+2. Update 성공!
+3. HowManySeleted 성공!
+4. Current Selected 성공!
+5. AddShape 미완
+6. DeleteShape 미완
+
+__현재까지 각종 Error 체크 했을 시 오류 없었음!__
+
+
+
+
+
+
+## 09.13
