[09.13] Update Draw Door, Draw Window, Group (70%)

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -289,3 +289,63 @@ __현재까지 각종 Error 체크 했을 시 오류 없었음!__
 
 
 ## 09.13
+
+> 천천히 생각하자. 오늘은 계속 어려운 것만 해결하다보니 많이 힘들었다. <br/>
+그래도 천천히 많이 생각하고, 코드를 깨끗하게 구조를 깨끗하게 하다보니 오래 생각하면 계속 방법이 나왔다. <br/>
+급하게 짜지 말고 좋은 방법을 찾을 것!
+
+
+__[09.13] Issue 2__
+
+1. DrawDoor
+2. MoveDoor
+3. DrawWindow
+4. MoveWindow
+5. AddShape
+6. DeleteShape
+
+__마우스 우클릭 삭제 이벤트 구현했음__
+
+### SetDoorWindowRange (개 핵핵핵핵 어려움)
+
+* Door와 Window는 Room의 범위내에서 특정 크기 한정으로 그려져야한다.
+
+* 그려지는 범위가 특정 어느 룸의 DrawRange 범위인지 찾고 거기서 각각 그려지는 방향에 맞춰서 고정할 부분을 고정하고 움직일 부분은 움직이며 그린다.
+
+* 그 상황 속에서 선택된 룸은 그 문을 가지고 있다는 뜻으로 룸의 ShapeVector 인덱스를 기억하다가 마우스를 때면 전체 벡터에 문을 넣고, 해당 룸의 Door나 Window 벡터에도 객체를 담는다.  ```m_nRememberIndexForDoorWindowVector```
+
+* 문과 창문의 자세한 알고리즘은 너무 기므로 생략 __SetDoorWindowRange__ 라는 ShapeHandler의 멤버함수에 있다.
+
+* 삭제할 때는 해당 방을 삭제할 때는 그 방이 가지고 있는 Door와 Window 벡터를 모두 삭제하고 전체 벡터 상에서도 Door와 벡터를 삭제해야한다. 즉 둘다 삭제해야하는 삭제의 문제점이 여러가지 있다.
+
+* 그룹화 삭제 알고리즘  ```DeleteSelectedShape```의 함수를 보면 코드가 있다.
+
+<pre>
+/// 그룹화 삭제 알고리즘
+// 찾아서 삭제하는데! 하나 삭제하면 전체 갯수가 줄어드므로 벡터의 인덱스가 바뀜!
+// 그렇기 때문에 다음 루프에서 또 삭제할 때 오류가 남
+// 해결 방법으로 벡터의 맨 뒤에서부터 검색해 삭제할 것을 찾으면 됨
+// 근데 창문과 문을 섞어서 만들경우 결국 생성 인덱스가 섞여버림...
+// 정렬해야 됨, 정렬해서 뒤에서부터 삭제해야 됨...
+// 새로운 벡터를 생성해 값을 다 넣고 정렬한다음 삭제한다.
+</pre>
+
+### 해결한 것
+
+1. DrawDoor 해결
+2. MoveDoor 미완 -> 룸의 범위를 벗어나게 하면 안 됨
+3. DrawWindow 해결
+4. MoveWindow 미완 -> 룸의 범위를 벗어나게 하면 안 됨
+5. AddShape 해결
+6. DeleteShape 해결
+
+### 해야할 것
+
+1. MoveDoor
+2. MoveWindow
+3. MoveGroup
+4. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+5. Scale ( 마우스 휠 이벤트 처리기로 하기 )
+6. Edit, Copy, Rotate ( 이벤트 처리기 리스너 만들어놈 )
+7. User Object ( 마그네틱, 스냅 등등 )
+8. Material ( 그냥 이미지 덮기 )
