--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -316,7 +316,7 @@ __마우스 우클릭 삭제 이벤트 구현했음__
 
 * 문과 창문의 자세한 알고리즘은 너무 기므로 생략 __SetDoorWindowRange__ 라는 ShapeHandler의 멤버함수에 있다.
 
-* 삭제할 때는 해당 방을 삭제할 때는 그 방이 가지고 있는 Door와 Window 벡터를 모두 삭제하고 전체 벡터 상에서도 Door와 벡터를 삭제해야한다. 즉 둘다 삭제해야하는 삭제의 문제점이 여러가지 있다.
+* 방을 삭제할 때는 그 방이 가지고 있는 Door와 Window 벡터를 모두 삭제하고 전체 벡터 상에서도 Door와 벡터를 삭제해야한다. 즉 둘다 삭제해야 하는데, 둘다 넣고 삭제하는 것이 쉽지 않았다.
 
 * 그룹화 삭제 알고리즘  ```DeleteSelectedShape```의 함수를 보면 코드가 있다.
 
