--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -230,10 +230,8 @@ pView->RedrawWindow();
 #else
 #pragma comment(linker, "/entry:WinMainCRTStartup /subsystem:console")
 #endif
-#endif
+#endif   <a__>
 </pre>
-
-__
 
 ### 소멸자 virtual, c++의 instanceof인 typeid
 
@@ -318,16 +316,25 @@ __마우스 우클릭 삭제 이벤트 구현했음__
 
 * 방을 삭제할 때는 그 방이 가지고 있는 Door와 Window 벡터를 모두 삭제하고 전체 벡터 상에서도 Door와 벡터를 삭제해야한다. 즉 둘다 삭제해야 하는데, 둘다 넣고 삭제하는 것이 쉽지 않았다.
 
+* 물론 하나만 삭제할 때도 각각 다 삭제해줘야 한다.
+
 * 그룹화 삭제 알고리즘  ```DeleteSelectedShape```의 함수를 보면 코드가 있다.
 
 <pre>
-/// 그룹화 삭제 알고리즘
-// 찾아서 삭제하는데! 하나 삭제하면 전체 갯수가 줄어드므로 벡터의 인덱스가 바뀜!
-// 그렇기 때문에 다음 루프에서 또 삭제할 때 오류가 남
-// 해결 방법으로 벡터의 맨 뒤에서부터 검색해 삭제할 것을 찾으면 됨
-// 근데 창문과 문을 섞어서 만들경우 결국 생성 인덱스가 섞여버림...
-// 정렬해야 됨, 정렬해서 뒤에서부터 삭제해야 됨...
-// 새로운 벡터를 생성해 값을 다 넣고 정렬한다음 삭제한다.
+[ 그룹화 삭제 알고리즘 ]
+찾아서 삭제하는데! 하나 삭제하면 전체 갯수가 줄어드므로 벡터의 인덱스가 바뀜!
+그렇기 때문에 다음 루프에서 또 삭제할 때 오류가 남
+해결 방법으로 벡터의 맨 뒤에서부터 검색해 삭제할 것을 찾으면 됨
+근데 창문과 문을 섞어서 만들경우 결국 생성 인덱스가 섞여버림...
+정렬해야 됨, 정렬해서 뒤에서부터 삭제해야 됨...
+새로운 벡터를 생성해 값을 다 넣고 정렬한다음 삭제한다.
+
+[ Room에 속한 Door, Window 삭제 알고리즘 ]
+Door나 Window만 삭제할 때도 그냥 삭제하면 안 됨, 해당 Room에서도 삭제해야 함
+1. 해당 Door나 Window가 속한 Room의 ShapeVector에서의 Index에서
+2. 그 룸에서의 벡터에서 또 몇 번째에 위치하고 있는지까지 알아야 함
+3. 모두 다 알았으면 해당 Door나 Window가 속한 Room에서의 벡터를 찾고, 그 벡터의 해당 위치에서 삭제
+4. 전체 Shape Vector에서 삭제
 </pre>
 
 ### 해결한 것
@@ -349,3 +356,31 @@ __마우스 우클릭 삭제 이벤트 구현했음__
 6. Edit, Copy, Rotate ( 이벤트 처리기 리스너 만들어놈 )
 7. User Object ( 마그네틱, 스냅 등등 )
 8. Material ( 그냥 이미지 덮기 )
+
+
+
+
+## 09.14
+
+
+### for auto문
+
+* auto type은 말그대로 자동 할당이라는 말이다. c++의 컴파일러는 오른쪽에서 왼쪽으로 코드를 읽어들이는데 auto type은 대입문에서 오른쪽의 변수의 타입을 자동으로 읽어 갖다놓는다는 것으로 활용할 수 있다.
+* C++, 단순 반복문일 경우 for auto문을 활용하자, 속도면에서도 더 빠름
+* C++ 벡터에서 at 이런 거 안써도 [] 대괄호로 사용 가능했었음...ㅎㅎ
+* 밑의 문장은 똑같은 일을 하는 반복문이다. 밑의 for auto문을 사용한 것이 훨신 간결하다!!  ( iterator를 리턴함 )
+
+
+<pre>
+for (int i = 0; i < dynamic_cast<RoomShape*>(m_CaShape.at(nSelectedIndex))->m_CaWindow.size(); i++)
+{
+  dynamic_cast<RoomShape*>(m_CaShape.at(nSelectedIndex))->m_CaWindow.at(i) = NULL;
+}
+for (auto nIdx : dynamic_cast<RoomShape*>(m_CaShape[nSelectedIndex])->m_CaWindow  )
+{
+  *nIdx = NULL;  <a*>
+}
+</pre>
+
+
+## 09.15
