--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -424,16 +424,19 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 1. 삭제의 각종 오류 해결, 자료구조 정리!!
 
+추가 : 야근으로 해결 더 함ㅎㅎ, 설계를 잘 해놓으니 금방했음!
+
+1. 창문이나 문을 그릴 때 갖다 붙이면 두번째 Room에는 안 들어감! 코드 수정 해결!
+2. Group Move 해결!!, 방안의 문이나 창문이 이상한 모양이 되지 못하게 해결 함
+
 ### 해야할 것
 
-1. 창문이나 문을 그릴 때 갖다 붙이면 두번째 Room에는 안 들어감! 코드 수정할 것
-2. MoveDoor 미완 -> 룸의 범위를 벗어나게 하면 안 됨
-3. MoveWindow 미완 -> 룸의 범위를 벗어나게 하면 안 됨
-4. MoveGroup
-5. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
-6. Scale ( 마우스 휠 이벤트 처리기로 하기 )
-7. Edit, Copy, Rotate ( 이벤트 처리기 리스너 만들어놈 )
-8. User Object ( 마그네틱, 스냅 등등 )
-9. Material ( 그냥 이미지 덮기 )
+1. MoveDoor, MoveWindow 미완 -> 룸의 범위를 벗어나게 하면 안 됨
+2. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+3. Scale ( 마우스 휠 이벤트 처리기로 하기 )
+4. Edit, Copy, Rotate ( 이벤트 처리기 리스너 만들어놈 )
+5. User Object ( 마그네틱, 스냅 등등 )
+6. Material ( 그냥 이미지 덮기 )
+7. Save Load As JSon ( 저장 로드 )
 
 ## 09.15
