--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -304,7 +304,7 @@ __[09.13] Issue 2__
 
 __마우스 우클릭 삭제 이벤트 구현했음__
 
-### SetDoorWindowRange (개 핵핵핵핵 어려움)
+### SetDoorWindowRange (개 핵핵핵핵 어려움)  다음날 알고리즘 다 바꿈.. 주의
 
 * Door와 Window는 Room의 범위내에서 특정 크기 한정으로 그려져야한다.
 
