--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -438,3 +438,18 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 7. Save Load As JSon ( 저장 로드 )
 
 ## 09.15
+
+
+### 해결한 것
+
+1. MoveDoor, MoveWindow
+2. Copy
+3. Scale
+
+### 해야할 것
+
+2. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+4. Edit, Rotate ( 이벤트 처리기 리스너 만들어놈 )
+5. User Object ( 마그네틱, 스냅 등등 )
+6. Material ( 그냥 이미지 덮기 )
+7. Save Load As JSon ( 저장 로드 )
