--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -439,6 +439,21 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 ## 09.15
 
+### __버그 발견__
+
+#### Room 크기에 맞춰 Door나 Window를 그릴경우
+
+* 멘탈 나갔었지만 해결
+
+#### Wheel 할 시 커졌다 작아지면 오류
+
+* 로직 문제
+
+#### 교훈
+
+* 이제 점점 프로그램이 커지다 보니 생각할 것이 매우 많아졌다. 하지만 범위를 계속 좁혀나가고 무슨 문제가 오류일까를 근본적으로 해결할 것!!
+* 수학적인 공식을 대충하려 하지말고 완벽하게 해서 대입할 것, 그 부분이 나 스스로 확신이 안 들면 나중에 계속 거기 문제라고 생각함ㅠㅠㅠㅠ
+* 포기하지 말고 다시 생각해보고 꾸준히 생각해보자
 
 ### 해결한 것
 
