[09.17] Update Team Rule

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -404,8 +404,6 @@ for (auto nIdx : dynamic_cast<RoomShape*>(m_CaShape[nSelectedIndex])->m_CaWindow
 auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[nSelectedIndex])->pInRoomShapePointer)->m_CaDoor;
 </pre>
 
-
-
 1. 선택된 문이나 창문의 ID 값을 쓰레기 값으로 변경 ```tmpSelectedDoorPtr->SetId(-600000);```
 2. 전체 Shape 벡터에서는 아이디 값이 쓰레기 값인 것을 삭제
 3. 문 벡터에서는 아이디 값이 쓰레기 값인 것을 삭제
@@ -415,8 +413,6 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 1. 내가 어차피 각 Shape 마다 고유의 id 값을 만들어 놨다.
 2. ShapeHandler가 map 이라는 것을 가지게 만들어서 key 값은 고유 id, value 값은 각 Shape의 포인터를 리턴하게 하면 정말 사용하기 쉬을 듯!
-
-
 
 ### 해결한 것
 
@@ -437,7 +433,10 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 6. Material ( 그냥 이미지 덮기 )
 7. Save Load As JSon ( 저장 로드 )
 
-## 09.15
+
+
+
+## 09.17
 
 ### __버그 발견__
 
@@ -460,6 +459,25 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 1. MoveDoor, MoveWindow
 2. Copy
 3. Scale
+
+### 해야할 것
+
+2. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+4. Edit, Rotate ( 이벤트 처리기 리스너 만들어놈 )
+5. User Object ( 마그네틱, 스냅 등등 )
+6. Material ( 그냥 이미지 덮기 )
+7. Save Load As JSon ( 저장 로드 )
+
+
+
+
+## 09.18
+
+### 해결한 것
+
+1. Magnetic
+2. 
+
 
 ### 해야할 것
 
