[09.18] Magnetic 알고리즘 설계완료, 구현 70%

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -475,14 +475,22 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 ### 해결한 것
 
-1. Magnetic
-2. 
+## 해결한 것
 
+1. Magnetic 알고리즘 설계 (정말 사용자가 필요할 것이라고 생각되는 모든 경우에서 Magnetic이 됨!), 구현은 70%
 
-### 해야할 것
+### Magnetic 알고리즘 설명
 
-2. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
-4. Edit, Rotate ( 이벤트 처리기 리스너 만들어놈 )
-5. User Object ( 마그네틱, 스냅 등등 )
-6. Material ( 그냥 이미지 덮기 )
-7. Save Load As JSon ( 저장 로드 )
+![Magnetic](/media/magnetic1.png)
+
+![Magnetic](/media/magnetic2.png)
+
+![Magnetic](/media/magnetic3.png)
+
+## 해야할 것
+
+1. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+2. Edit, Rotate ( 이벤트 처리기 리스너 만들어놈 )
+3. User Object ( 마그네틱, 스냅 등등 )
+4. Material ( 그냥 이미지 덮기 )
+5. Save Load As JSon ( 저장 로드 )
