--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -475,11 +475,9 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 ### 해결한 것
 
-## 해결한 것
-
 1. Magnetic 알고리즘 설계 (정말 사용자가 필요할 것이라고 생각되는 모든 경우에서 Magnetic이 됨!), 구현은 70%
 
-### Magnetic 알고리즘 설명
+#### Magnetic 알고리즘 설명
 
 ![Magnetic](/media/magnetic1.png)
 
