--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -479,17 +479,11 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 #### Magnetic 알고리즘 설명
 
-![Magnetic](/media/magnetic1.png)
-
----
-
-![Magnetic](/media/magnetic2.png)
-
----
-
-![Magnetic](/media/magnetic3.png)
-
----
+| 알고리즘 설명 |
+| ---- |
+| ![Magnetic](/media/magnetic1.png) |
+| ![Magnetic](/media/magnetic2.png) |
+| ![Magnetic](/media/magnetic3.png) |
 
 ## 해야할 것
 
