[09.19] Magnetic 알고리즘 구현

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -481,9 +481,23 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 | 알고리즘 설명 |
 | ---- |
-| ![Magnetic](/media/magnetic1.png) |
-| ![Magnetic](/media/magnetic2.png) |
+| ![Magnetic](/media/magnetic1_t.png) |
+| ![Magnetic](/media/magnetic2_t.png) |
 | ![Magnetic](/media/magnetic3.png) |
+
+## 해야할 것
+
+1. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+2. Edit, Rotate ( 이벤트 처리기 리스너 만들어놈 )
+3. User Object ( 마그네틱, 스냅 등등 )
+4. Material ( 그냥 이미지 덮기 )
+5. Save Load As JSon ( 저장 로드 )
+
+## 09.19
+
+### 해결한 것
+
+1. Magnetic, 구현 완벽히 다 됨!
 
 ## 해야할 것
 
