[09.19] 중괄호 문법 추가

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -493,7 +493,58 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 4. Material ( 그냥 이미지 덮기 )
 5. Save Load As JSon ( 저장 로드 )
 
+
+
 ## 09.19
+
+
+### 불필요한 중괄호?
+
+<pre>
+{ // 방 안의 창문과 문도 Update
+  //In Room Door
+  for (auto CDoorShape : tmpRoomShape->m_CaDoor)
+  {
+
+  }
+  //In Room Window
+  for (auto CWindowShape : tmpRoomShape->m_CaWindow)
+  {
+
+  }
+}
+</pre>
+
+#### C++에선 다음과 같이 특정 조건이 없는 중괄호도 허용한다. 이것은 어디에 쓰일끼?
+
+* 블록 범위의 문법을 사용할 수 있다.
+  * 중괄호 내에서 변수를 만들면 중괄호가 끝나면 사라지게 된다.
+  * ```for문``` 내에서 ```int i```를 선언하고 끝나면 ```i```가 사라지는 것과 같다.
+  * 동일한 변수 이름을 사용할 수도 있지만 그건 좋은 생각은 아니다.
+
+* 블록 범위의 개념을 사용할 수 있다.
+  * 특정 (하위) 목적을 달성하는 코드 블록을 단순히 분리하는 것이다.
+  * 조금 더 자세히 말하면, 한 덩어리는 일관된 개념과 목적을 가지고 사용할 수 있다.
+  * 이것을 이용하면 조금 더 가독성 있는 코드를 만들 수 있으며, 주석을 이용하면 남이 봐도 이해하기 쉬운 코드를 만들 수 있다.
+
+* 예시
+  * 필요에 따라 리팩토링하는 코드, 테스트하는 코드를 넣어 사용할 수 있다.  
+  * UI 관련 클래스에서도 유용하다.
+
+<pre>
+{ //test1
+   <...>
+}
+{//start video btn
+   <...>
+}
+</pre>
+
+* 기타 장점
+  * 편집자가 접기 / 펼치기 기능을 쓸 수 있다.
+
+__일회용 메소드를 만들 기에는 좋지 않지만 개념적으로 나누어야 할 때, 이 문법을 이용해서 블럭 단위로 나누고, 다른 개념이 되는 코드 덩어리를 구성하여 사용하면 유용하다.__
+
 
 ### 해결한 것
 
@@ -504,5 +555,6 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 1. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
 2. Edit, Rotate ( 이벤트 처리기 리스너 만들어놈 )
 3. User Object ( 마그네틱, 스냅 등등 )
-4. Material ( 그냥 이미지 덮기 )
+4. Material ( 그냥 이미지 덮기 ) -> 단순 MFC 공부라 필요하면 추가
 5. Save Load As JSon ( 저장 로드 )
+7. PNG 사진 찍는 기능
