[09.19] Magnetic 알고리즘 그림 수정

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -481,9 +481,9 @@ auto tmpDoorPtr = &dynamic_cast<RoomShape *>(dynamic_cast<DoorShape*>(m_CaShape[
 
 | 알고리즘 설명 |
 | ---- |
-| ![Magnetic](/media/magnetic1_t.png) |
-| ![Magnetic](/media/magnetic2_t.png) |
-| ![Magnetic](/media/magnetic3.png) |
+| ![Magnetic](/media/magnetic1_n.png) |
+| ![Magnetic](/media/magnetic2_n.png) |
+| ![Magnetic](/media/magnetic3_n.png) |
 
 ## 해야할 것
 
