[09.19] UserObject, 캡쳐 1. UserObject Magnetic 제외 2. PNG 캡쳐

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -585,24 +585,101 @@ return true;
 
 ### 해결한 것
 
-1. 키보드 단축기
+* 키보드 단축기
   * ctrl+c : 복사 구현
   * ctrl+v : 붙여넣기 구현
   * ctrl+x : 삭제 구현
-2. Edit 구현
+* Edit 구현
   * dbclick 구현
   * Menu 마우스 오른쪽 구현, 둘다 다 됨
 
 
 ### 해야할 것
 
-1. Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
-2. Save Load As JSon ( 저장 로드 )
-3. User Object ( 마그네틱, 스냅 등등 ) -> 그냥 간단히, 색깔 다른 Rect로 만들 것
-4. PNG 사진 찍는 기능 -> 단순한 api 이용
-5. 키보드 단축기
+* Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+* Save Load As JSon ( 저장 로드 )
+* User Object ( 마그네틱, 스냅 등등 ) -> 그냥 간단히, 색깔 다른 Rect로 만들 것
+* PNG 사진 찍는 기능 -> 단순한 api 이용
+* 키보드 단축기
   * ctrl+z : undo ( 이벤트 처리기 리스너만 만들어놈 )
   * ctrl+y : redo ( 리스너 만들었는데 안 불림ㅠ )
   * ctrl+s : 저장 ( 리스너 만들었는데 딴 거 불림 )
-6. 마우스 우클릭 메뉴
+* 마우스 우클릭 메뉴
   * Rotate ( 이벤트 처리기 리스너만 만들어놈 )
+
+
+
+
+
+
+## 09.20
+
+### 원하는 작업 영역 캡쳐
+
+<pre>
+// 원하는 작업 영역 캡쳐!!!
+// 개좋음~~~ 그냥 캡쳐 하고 싶은 Frame에다가 이 코드 넣으면 됨
+{
+  // View::OnLButtonDown
+  // 바탕 화면 윈도우 객체에 대한 포인터를 얻는다.
+  CWnd* pWndDesktop = GetDesktopWindow();
+  // 바탕 화면 윈도우 DC
+  CWindowDC ScrDC(pWndDesktop);
+  // 뷰 윈도우 DC
+  CClientDC dc(this);
+
+  // Rect를 사용해서 작업 영역에 대한 좌표를 얻고,
+  CRect Rect;
+  GetClientRect(&Rect);
+
+  // 그 위치를 현재 윈도우의 절대 좌표로 변경해 주자.
+  CWnd::GetWindowRect(&Rect);
+
+  // CImage를 하나 만들고
+  CImage Image;
+  // 스캔을 시작할 x, y 위치와
+  int sx = Rect.left;
+  int sy = Rect.top;
+  // 작업 영역에 대한 크기를 각각 임시로 저장해 두자.
+  int cx = Rect.Width();
+  int cy = Rect.Height();
+
+  // 작업 영역의 크기만큼, 현재 바탕화면의 속성과 동일한 image를 생성한다.
+  Image.Create(cx, cy, ScrDC.GetDeviceCaps(BITSPIXEL));
+  // 이미지 DC에 현재 작업 영역의 절대 좌표를 사용해 그 크기만큼 저장하게 한다.
+  CDC* pDC = CDC::FromHandle(Image.GetDC());
+  pDC->BitBlt(0, 0, cx, cy, &ScrDC, sx, sy, SRCCOPY);
+  Image.ReleaseDC();
+
+  // 저장된 이미지를 원하는 파일명, 포멧타입을 지정해서 저장한다.
+  Image.Save(TEXT("media\\capture\\image.png"), Gdiplus::ImageFormatJPEG);
+
+  // 그 파일을 실행해 준다.
+  ::ShellExecute(NULL,
+    TEXT("open"), TEXT("media\\capture\\image.png"),
+    NULL, NULL, SW_SHOW);
+}
+</pre>
+
+
+
+### 해결한 것
+
+* UserObject
+  * Add, Edit, Delete, Wheel, Copy Paste, Move, Magnetic, Select 구현
+* PNG 사진 찍는 기능 -> 단순한 api 이용
+
+### 해야할 것
+
+
+* Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+* Save Load As JSon ( 저장 로드 )
+* 마우스 우클릭 메뉴
+  * Rotate ( 이벤트 처리기 리스너만 만들어놈 )
+* 키보드 단축기
+  * ctrl+z : undo ( 이벤트 처리기 리스너만 만들어놈 )
+  * ctrl+y : redo ( 리스너 만들었는데 안 불림ㅠ )
+  * ctrl+s : 저장 ( 리스너 만들었는데 딴 거 불림 )
+* UserObject
+  * 추 후 색깔이 아닌 SetImage를 사용하여 이미지 넣을 것
+  * 추 후 Room 그룹화 고민해 볼 것
