--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -612,7 +612,7 @@ return true;
 
 
 
-## 09.20
+## 09.21
 
 ### 원하는 작업 영역 캡쳐
 
@@ -655,9 +655,9 @@ return true;
   Image.Save(TEXT("media\\capture\\image.png"), Gdiplus::ImageFormatJPEG);
 
   // 그 파일을 실행해 준다.
-  ::ShellExecute(NULL,
-    TEXT("open"), TEXT("media\\capture\\image.png"),
-    NULL, NULL, SW_SHOW);
+	// 그 파일을 실행해 준다.
+	// 응용 프로그램을 실행시킬 수 있음!
+	ShellExecute(NULL, TEXT("open"), TEXT("media\\capture\\image.png"), NULL, NULL, SW_SHOW);
 }
 </pre>
 
