[09.27] Visual Set, 오늘 배운 것

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -666,11 +666,10 @@ return true;
 ### 해결한 것
 
 * UserObject
-  * Add, Edit, Delete, Wheel, Copy Paste, Move, Magnetic, Select 구현
+  * SetImageIcon, Add, Edit, Delete, Wheel, Copy Paste, Move, Magnetic, Select 구현
 * PNG 사진 찍는 기능 -> 단순한 api 이용
 
 ### 해야할 것
-
 
 * Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
 * Save Load As JSon ( 저장 로드 )
@@ -681,5 +680,17 @@ return true;
   * ctrl+y : redo ( 리스너 만들었는데 안 불림ㅠ )
   * ctrl+s : 저장 ( 리스너 만들었는데 딴 거 불림 )
 * UserObject
-  * 추 후 색깔이 아닌 SetImage를 사용하여 이미지 넣을 것
   * 추 후 Room 그룹화 고민해 볼 것
+  * 이미지 Width, Height Edit 가능하게 하기 (비트맵 이미지 크기를 바꿔야됨)
+
+
+## 09.27
+
+* [Viusal 개발 기본 Setting](../VisualBasicSet.md)
+* 코딩 규칙
+  * 클래스를 넘길 때, 값에 의한 호출을 하면 클래스가 생성이 되므로, 복사생성자를 만들지 않았을 시 올바른 복사가 이루어지지 않는다. 때문에 클래스는 참조를 통해 넘기거나 복사생성자를 만들어야하는데, 값에 의한 호출의 경우 어차피 값이 바뀌지 않으니 참조와 const를 이용해 값을 넘겨 사용한다.
+* 박종봉 선배님
+  * Filter의 개념
+  * Feature, Member
+  * 개발 시작
+  <br/> CIM -> CIMc_ui, Feature, 3D, Filling
