[09.28] Visual Add In 추가

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -694,3 +694,10 @@ return true;
   * Feature, Member
   * 개발 시작
   <br/> CIM -> CIMc_ui, Feature, 3D, Filling
+
+
+
+## 09.27
+
+* 전처리기 IN, OUT 활용하기!
+* 남이 이해하기 쉬운 코드 작성하기
