[09.28] Visual Basic, Basic Edu

--- a/contents/2018.09/09.md
+++ b/contents/2018.09/09.md
@@ -696,8 +696,7 @@ return true;
   <br/> CIM -> CIMc_ui, Feature, 3D, Filling
 
 
+## 09.28
 
-## 09.27
-
-* 전처리기 IN, OUT 활용하기!
-* 남이 이해하기 쉬운 코드 작성하기
+* [Viusal 개발 기본 Setting](../VisualBasicSet.md)
+* [Basic Education](../BasicEducation/README.md)
