--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -54,8 +54,50 @@ void CStationObj()
 
 * Feature 툴 사용, 모델링 해보기 (4)
 * mday ppt 제작
-
+* shared_ptr 공부할 것
 
 ### 해결한 것
 
 * Solid 기능 구현 약간
+
+
+## 10.02
+
+### 해결한 것
+
+* MDay 발표 준비
+
+### 해야 할 것
+
+* Feature 툴 사용, 모델링 해보기 (4)
+* mday ppt 제작
+* shared_ptr 공부할 것
+* Feature Solid
+
+
+
+
+## 10.04
+
+### 해결한 것
+
+* Feature 툴 사용, 모델링 해보기 (4)
+
+### 해야 할 것
+
+* Feature 툴 사용, 모델링 해보기 (4)
+* shared_ptr 공부할 것
+* Feature Solid
+
+
+## 10.05
+
+### 해결한 것
+
+* Feature Solid 하는 중
+
+### 해야 할 것
+
+* C++, C# ??
+* shared_ptr 공부할 것
+* Feature Solid
