[10.08] 오늘 공부한 것들

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -8,7 +8,7 @@
 
 ## 10.01
 
-### C++ 문법 공부
+### C++ 공부
 
 #### 익명 함수 문법(Lambda)
 
@@ -101,3 +101,69 @@ void CStationObj()
 * C++, C# ??
 * shared_ptr 공부할 것
 * Feature Solid
+
+
+<hr/>
+
+## 10.08
+
+### C++ 공부
+
+#### 교차 포함 (형식 지정자가 필요합니다)
+
+분명히 클래스를 Include 하였음에도 불구하고 오류가 난다. <br/>
+program once에 의해 Include가 한번만 불려지기 때문, 아니면 포함하지 않았지만 간접적으로 서로를 포함한 경우 에러가 발생
+
+<pre>
+#pragma once
+class A; // class A가 존재한다고만 알려줍니다.
+class B
+{
+public:
+ A* a; // 포인터로 바꾸었습니다.
+};
+</pre>
+
+<pre>
+#pragma once
+class B; // class B가 존재한다고만 알려줍니다.
+class A
+{
+public:
+ B* b;
+};
+</pre>
+
+다음과 같이 참조하는 클래스를 포인터로 선언하고, __클래스를 나중에 구현할 것이다!__ 하고 선언만 해 놓으면 간단히 오류를 해결할 수 있다.
+
+
+#### C++, C#, Java
+
+* 다양한 언어가 나와서 각자의 영역을 조금씩 마련했다.
+* 각각 장단점이 있고 분야에 맞게 사용하는 것이 좋다.
+* 하지만 범용적으로 쓰이는 언어는 자바가 맞다.
+
+#### Inline 함수
+
+* 최적화에 사용
+* Stack에서 컴파일러가 함수를 호출하는 대신, 그에 대응하는 함수 코드 자체를 넣는다는 것을 의미. 주소를 왔다갔다 하며 되돌아오지 않기 때문에 어떤 연산을 많이하는 함수 같은 경우에 유리.
+* 컴파일러에 의해 처리가 되기 때문에 디버깅에 용이
+* 근데 지금은 컴파일러가  오히려 성능에 해가된다고 판단하면 무시하기도 하고(재귀함수이거나 덩치가 큰 함수) 도움이 된다고 생각하면 일부 함수들을 임의로 인라인 처리를 하기도 함.
+* 즉 인라인 자동화로 요새는 많이 사용하지는 않지만 퍼포먼스에 중요한 프로그램일 경우 생각하며 리팩토링 하는게 좋을 듯?
+
+
+#### Interface
+
+* 순수가상함수로 짜면 된다.
+* 문법으로도 따로 ```__interface``` 라는 것이 있다.
+
+<br/>
+
+### 해결한 것
+
+* Feature Solid 완성!
+
+### 해야 할 것
+
+* shared_ptr 공부할 것
+* Feature Solid 테스트 코드 작성할 것 (구글의 gtest)
