[10.10] 오늘 공부한 것들

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -167,3 +167,31 @@ public:
 
 * shared_ptr 공부할 것
 * Feature Solid 테스트 코드 작성할 것 (구글의 gtest)
+
+
+## 10.10
+
+### gtest
+
+#### 특징
+
+* Google에서 개발된 C++ 테스트 프레임 워크
+* Git에서 다운받아서 헤더파일 추가해서 사용
+* 간단한 사용 방식은 다운 받아서, 검증해야할 부분을 검증하면 됨
+* 사용하기 편하게 라이브러리를 덮어서 만들면 더 좋음, Test Fixture
+* 구글에서도 실제로 사용 중 (Chrom)
+* 항상 맞다고 생각하는 부분은 꼭 테스트 코드를 작성해야 함 (DB, Socket 통신 등등)
+* 테스트 코드를 다 통과하더라도 버그가 없는 건 아니다.
+* 사실 상 및에 참고 자료 정독하면 다 이해 됨
+
+#### 참고 자료
+
+* <https://www.slideshare.net/jinhwason/ss-69528881>
+* <https://www.slideshare.net/zone0000/c-7522148?next_slideshow=1>
+
+* Interior Program 구조 개선 중
+
+### 해야 할 것
+
+* shared_ptr 공부할 것
+* Feature Solid 테스트 코드 작성할 것 (구글의 gtest)
