--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -195,3 +195,15 @@ public:
 
 * shared_ptr 공부할 것
 * Feature Solid 테스트 코드 작성할 것 (구글의 gtest)
+
+
+## 10.11
+
+### 해결한 것
+
+* MFC-InteriorProgram 리팩토링
+
+### 해야 할 것
+
+* shared_ptr 공부할 것
+* Feature Solid 테스트 코드 작성할 것 (구글의 gtest)
