[10.12] 오늘 공부한 것들

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -207,3 +207,22 @@ public:
 
 * shared_ptr 공부할 것
 * Feature Solid 테스트 코드 작성할 것 (구글의 gtest)
+
+
+
+
+## 10.12
+
+### 전체 구조 변경... 너무 안 좋은 구조 개선
+
+![Magnetic](/media/ShapeStructure.png)
+
+
+### 해결한 것
+
+* MFC-InteriorProgram 리팩토링
+* Feature Solid 끝
+
+### 해야 할 것
+
+* shared_ptr 공부할 것
