[10.15] 오늘 공부한 것들

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -226,3 +226,19 @@ public:
 ### 해야 할 것
 
 * shared_ptr 공부할 것
+
+
+<br/>
+<hr/>
+
+
+## 10.15
+
+### 해결한 것
+
+* MFC-InteriorProgram 리팩토링 중
+
+### 해야 할 것
+
+* shared_ptr 공부할 것
+* 개발 제품 수업
