[10.15] 구조 개선 Log

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -234,6 +234,12 @@ public:
 
 ## 10.15
 
+### 전체 구조 변경
+
+| 기존 구조 | 변경된 구조 |
+| ---- | ---- |
+| ![structure](/media/ShapeStructure1.png) | ![structure](/media/ShapeStructure2.png) |
+
 ### 해결한 것
 
 * MFC-InteriorProgram 리팩토링 중
