--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -236,9 +236,13 @@ public:
 
 ### 전체 구조 변경
 
-| 기존 구조 | 변경된 구조 |
-| ---- | ---- |
-| ![structure](/media/ShapeStructure1.png) | ![structure](/media/ShapeStructure2.png) |
+| 기존 구조 |
+| ---- |
+| ![structure](/media/ShapeStructure1.png) |
+
+| 변경된 구조 |
+| ---- |
+| ![structure](/media/ShapeStructure2.png) |
 
 ### 해결한 것
 
