[10.16] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -252,3 +252,39 @@ public:
 
 * shared_ptr 공부할 것
 * 개발 제품 수업
+
+
+## 10.16
+
+### 해결한 것
+
+* MFC-InteriorProgram 리팩토링 끝!
+* CIM 수업 끝!, 간단한 정리 파트 공유 폴더
+
+### 해야 할 것
+
+#### Interior Program 남은 기능
+
+* Redo, Undo ( 딜리트 시 스택에 담으면 됨 )
+   * 키보드 단축기
+      * ctrl+z : undo ( 이벤트 처리기 리스너만 만들어놈 )
+      * ctrl+y : redo ( 리스너 만들었는데 안 불림ㅠ )
+
+* Save Load As JSon ( 저장 로드 )
+   * 키보드 단축기
+      * ctrl+s : 저장 ( 리스너 만들었는데 딴 거 불림 )
+      * ctrl+o : 불러오기 ( 리스너 만들어야 함 )
+
+* 마우스 우클릭 메뉴
+  * Rotate ( 이벤트 처리기 리스너만 만들어놈 )
+
+* ObjectShape
+  * 추 후 Room 그룹화 고민해 볼 것
+  * 이미지 크기 변환 (Wheel, Edit)
+  * 사용자 추가 기능
+
+* Group Mode??
+
+* 재질 바꾸기
+
+* Magnetic 보완
