[10.18] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -298,3 +298,17 @@ public:
 
  * 수업 정리
  * InteriorProgram 각종 Issues
+
+
+
+
+
+## 10.18
+
+ * MIDAS DB 수업 (member)
+ * 대형 과제 첫 기획자와 회의... (예상 기간 1년...?)
+
+### 해야 할 것
+
+ * 수업 정리
+ * 당분간 또 InteriorProgram 못 할듯ㅠㅠ
