[10.22] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -312,3 +312,20 @@ public:
 
  * 수업 정리
  * 당분간 또 InteriorProgram 못 할듯ㅠㅠ
+
+
+
+<br/>
+
+
+
+
+
+## 10.22
+
+ * MIDAS DB 보완 업무 80% 완성
+
+### 해야 할 것
+
+  * MIDAS DB 보완
+  * Analytics Line
