[10.23] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -329,3 +329,16 @@ public:
 
   * MIDAS DB 보완
   * Analytics Line
+
+
+## 10.23
+
+ * MIDAS DB 보완 완성
+ * 고등 알고리즘 시험... 개망...  (알고리즘 한 문제씩 풀기 긴급...)
+
+
+
+### 해야 할 것
+
+  * MIDAS DB 보완
+  * Analytics Line
