--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -354,3 +354,16 @@ public:
 ### 해야 할 것
 
   * Analytics Line
+
+
+
+
+## 10.25
+
+ * Clean Code
+ * SolidPhase 다시 정리
+
+### 해야 할 것
+
+ * Analytics Line
+ * 사내 Doc
