[10.26][Add] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -367,3 +367,16 @@ public:
 
  * Analytics Line
  * 사내 Doc
+
+
+
+
+## 10.26
+
+ * Clean Code
+ * SolidPhase 다시 정리
+ * 사내 Doc
+
+### 해야 할 것
+
+ * Analytics Line
