--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -380,3 +380,25 @@ public:
 ### 해야 할 것
 
  * Analytics Line
+
+<br/>
+<hr/>
+
+
+
+
+## 10.29
+
+ * Clean Code
+ * 사내 Doc
+
+#### TODO Comment (작업목록)
+
+TODO 주석을 통해 앞으로의 할 일을 주석해놓고 ```Ctrl + \, Ctrl + T -> (Ctrl + F, Ctrl + T)```를 이용해 작업 목록을 조회할 수 있다.
+
+
+
+### 해야 할 것
+
+ * Analytics Line
+ * IFC Geometry Converter
