[10.30][Add] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -402,3 +402,17 @@ TODO 주석을 통해 앞으로의 할 일을 주석해놓고 ```Ctrl + \, Ctrl 
 
  * Analytics Line
  * IFC Geometry Converter
+
+
+
+
+## 10.30
+
+ * IFC Geometry Converter
+
+### 해야 할 것
+
+  * Analytics Line
+  * IFC Geometry Converter
+  * Clean Code
+  * 사내 Doc
