[10.31][Add] 오늘 공부한 것

--- a/contents/2018.10/10.md
+++ b/contents/2018.10/10.md
@@ -416,3 +416,20 @@ TODO 주석을 통해 앞으로의 할 일을 주석해놓고 ```Ctrl + \, Ctrl 
   * IFC Geometry Converter
   * Clean Code
   * 사내 Doc
+
+
+
+
+
+
+## 10.31
+
+ * IFC Geometry Converter
+ * MDay 준비
+
+### 해야 할 것
+
+  * Analytics Line
+  * IFC Geometry Converter
+  * Clean Code
+  * 사내 Doc
