--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -8,6 +8,19 @@
 
 ## 11.01
 
+ * IFC Geometry Converter
+    * dll, lib
+    * cmake
+    * OpenSceneGraph
+
+### 해야 할 것
+
+  * Analytics Line
+  * IFC Geometry Converter
+  * Clean Code
+  * 사내 Doc
+
+
 
 ### 해결한 것
 
