[11.01][Update] 공부한 내용 추가

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -9,7 +9,7 @@
 ## 11.01
 
  * IFC Geometry Converter
-    * dll, lib
+    * dll, lib - 오늘 처리 완료
     * cmake
     * OpenSceneGraph
 
@@ -19,9 +19,3 @@
   * IFC Geometry Converter
   * Clean Code
   * 사내 Doc
-
-
-
-### 해결한 것
-
-### 해야할 것
