[11.05][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -19,3 +19,25 @@
   * IFC Geometry Converter
   * Clean Code
   * 사내 Doc
+
+
+<hr/>
+
+## 11.05
+
+ * IFC Geometry Converter
+    * cmake
+    * OpenSceneGraph
+    * BIM
+    * IFC
+
+-> 모두 개념 정리 완료!, 이제 코드 분석할 것
+
+
+
+### 해야 할 것
+
+  * Analytics Line
+  * IFC Geometry Converter
+  * Clean Code
+  * 사내 Doc
