--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -58,3 +58,19 @@
   * IFC Geometry Converter
   * Clean Code
   * 사내 Doc
+
+
+
+## 11.08
+
+ * IFC Geometry Converter
+   * Code 조금 분석   
+ * [C++ 17 공부](./cpp17.md)
+
+
+### 해야 할 것
+
+  * Analytics Line
+  * IFC Geometry Converter
+  * Clean Code
+  * 사내 Doc
