[11.08][Add] VSCode 추가

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -8,69 +8,68 @@
 
 ## 11.01
 
- * IFC Geometry Converter
-    * dll, lib - 오늘 처리 완료
-    * cmake
-    * OpenSceneGraph
+* IFC Geometry Converter
+  * dll, lib - 오늘 처리 완료
+  * cmake
+  * OpenSceneGraph
 
 ### 해야 할 것
 
-  * Analytics Line
-  * IFC Geometry Converter
-  * Clean Code
-  * 사내 Doc
+* Analytics Line
+* IFC Geometry Converter
+* Clean Code
+* 사내 Doc
 
-
-<hr/>
+---
 
 ## 11.05
 
- * IFC Geometry Converter
-    * cmake
-    * OpenSceneGraph
-    * BIM
-    * IFC
+* IFC Geometry Converter
+  * cmake
+  * OpenSceneGraph
+  * BIM
+  * IFC
 
 -> 모두 개념 정리 완료!, 이제 코드 분석할 것
 
- * [C++ 17 공부](./cpp17.md)
-
+* [C++ 17 공부](./cpp17.md)
 
 ### 해야 할 것
 
-  * Analytics Line
-  * IFC Geometry Converter
-  * Clean Code
-  * 사내 Doc
+* Analytics Line
+* IFC Geometry Converter
+* Clean Code
+* 사내 Doc
 
 
 
 ## 11.06
 
- * IFC Geometry Converter
-   * Code 조금 분석   
- * [C++ 17 공부](./cpp17.md)
+* IFC Geometry Converter
+  * Code 조금 분석   
+* [C++ 17 공부](./cpp17.md)
 
 
 ### 해야 할 것
 
-  * Analytics Line
-  * IFC Geometry Converter
-  * Clean Code
-  * 사내 Doc
+* Analytics Line
+* IFC Geometry Converter
+* Clean Code
+* 사내 Doc
 
 
 
 ## 11.08
 
- * IFC Geometry Converter
-   * Code 조금 분석   
- * [C++ 17 공부](./cpp17.md)
+* IFC Geometry Converter
+  * Code, 구조 분석
+* [C++ 17 공부 끝](./cpp17.md)
+* [Visual Basic Set](/contents/VisualCodeBasicSet.md)
 
 
 ### 해야 할 것
 
-  * Analytics Line
-  * IFC Geometry Converter
-  * Clean Code
-  * 사내 Doc
+* Analytics Line
+* IFC Geometry Converter
+* Clean Code
+* 사내 Doc
