[11.08][Add] CppBasic smart pointer 공부하기

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -64,6 +64,7 @@
 * IFC Geometry Converter
   * Code, 구조 분석
 * [C++ 17 공부 끝](./cpp17.md)
+* [C++ Basic](/contents/2018.11/CppBasic.md), smart pointer 추가하기
 * [Visual Basic Set](/contents/VisualCodeBasicSet.md)
 
 
