[11.09][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -74,3 +74,19 @@
 * IFC Geometry Converter
 * Clean Code
 * 사내 Doc
+
+
+
+## 11.09
+
+* IFC Geometry Converter
+  * Code 직접 짜기, 구조 분석
+* [C++ Basic](/contents/2018.11/CppBasic.md), smart pointer 추가하기
+
+
+### 해야 할 것
+
+* Analytics Line
+* IFC Geometry Converter
+* Clean Code
+* 사내 Doc
