[11.12][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -90,3 +90,21 @@
 * IFC Geometry Converter
 * Clean Code
 * 사내 Doc
+
+<br/>
+
+---
+
+## 11.09
+
+* IFC Geometry Converter
+  * Code 개발 중
+* [C++ Basic](/contents/2018.11/CppBasic.md), smart pointer 추가하기
+
+
+### 해야 할 것
+
+* Analytics Line
+* IFC Geometry Converter
+* Clean Code
+* 사내 Doc
