[11.13][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -32,7 +32,7 @@
 
 -> 모두 개념 정리 완료!, 이제 코드 분석할 것
 
-* [C++ 17 공부](./cpp17.md)
+* [C++ 17 공부](/contents/cpp17.md)
 
 ### 해야 할 것
 
@@ -47,7 +47,7 @@
 
 * IFC Geometry Converter
   * Code 조금 분석   
-* [C++ 17 공부](./cpp17.md)
+* [C++ 17 공부](/contents/cpp17.md)
 
 
 ### 해야 할 것
@@ -63,8 +63,8 @@
 
 * IFC Geometry Converter
   * Code, 구조 분석
-* [C++ 17 공부 끝](./cpp17.md)
-* [C++ Basic](/contents/2018.11/CppBasic.md), smart pointer 추가하기
+* [C++ 17 공부 끝](/contents/cpp17.md)
+* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
 * [Visual Basic Set](/contents/VisualCodeBasicSet.md)
 
 
@@ -81,7 +81,7 @@
 
 * IFC Geometry Converter
   * Code 직접 짜기, 구조 분석
-* [C++ Basic](/contents/2018.11/CppBasic.md), smart pointer 추가하기
+* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
 
 
 ### 해야 할 것
@@ -99,7 +99,7 @@
 
 * IFC Geometry Converter
   * Code 개발 중
-* [C++ Basic](/contents/2018.11/CppBasic.md), smart pointer 추가하기
+* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
 
 
 ### 해야 할 것
@@ -108,3 +108,20 @@
 * IFC Geometry Converter
 * Clean Code
 * 사내 Doc
+
+
+## 11.09
+
+* IFC Geometry Converter
+  * Code 개발 중
+* [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
+* IFCQuery Open Source Contribute
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* 사내 Doc
+* Analytics Line
