[11.14][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -95,7 +95,7 @@
 
 ---
 
-## 11.09
+## 11.12
 
 * IFC Geometry Converter
   * Code 개발 중
@@ -110,11 +110,28 @@
 * 사내 Doc
 
 
-## 11.09
+## 11.13
 
 * IFC Geometry Converter
   * Code 개발 중
 * [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
+* IFCQuery Open Source Contribute
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* 사내 Doc
+* Analytics Line
+
+
+## 11.14
+
+* IFC Geometry Converter
+  * Code 개발 중
+* [C++ Basic](/contents/CppBasic.md), smart pointer 추가
 * IFCQuery Open Source Contribute
 
 
