[11.15][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -116,6 +116,7 @@
   * Code 개발 중
 * [C++ Basic](/contents/CppBasic.md), smart pointer 추가하기
 * IFCQuery Open Source Contribute
+* Clean Code
 
 
 ### 해야 할 것
@@ -131,7 +132,26 @@
 
 * IFC Geometry Converter
   * Code 개발 중
-* [C++ Basic](/contents/CppBasic.md), smart pointer 추가
+* [C++ Basic](/contents/CppBasic.md), smart pointer 완료
+* Clean Code
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* 사내 Doc
+* Analytics Line
+
+
+
+## 11.15
+
+* IFC Geometry Converter
+  * 중간 완료, 테스트 코드 작성
+* [C++ Basic](/contents/CppBasic.md), C++ Getter, Setter
+* Clean Code
 
 
 ### 해야 할 것
