--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -150,7 +150,11 @@
 
 * IFC Geometry Converter
   * 중간 완료, 테스트 코드 작성
-* [C++ Basic](/contents/CppBasic.md), C++ Getter, Setter
+* [C++ Basic](/contents/CppBasic.md)
+  * C++ Getter, Setter
+  * Random header
+  * Regex header
+  * Multi Thread
 * Clean Code
 
 
