[11.16][오늘 공부한 것]

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -165,3 +165,23 @@
 * Clean Code
 * 사내 Doc
 * Analytics Line
+* cpp17 Varient
+
+
+
+
+## 11.16
+
+* IFC Geometry Converter
+  * 기능 개 많이 완료..., 테스트 코드 및 리팩토링 필요
+* Clean Code
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* 사내 Doc
+* Analytics Line
+* cpp17 Varient
