[11.20][Add] 오늘 공부한 것

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -185,3 +185,77 @@
 * 사내 Doc
 * Analytics Line
 * cpp17 Varient
+
+<br/>
+<hr/>
+
+
+## 11.19
+
+* IFC Geometry Converter
+  * 테스트 코드 및 리팩토링
+* Clean Code
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* 사내 Doc
+* Analytics Line
+* cpp17 Varient
+
+### 중단점
+
+#### 단축기
+
+* 중단점 창 __( ```ctrl + alt + B``` )__
+* 중단점 설정/해제/삭제 __( ```F9``` )__
+* 중단점 설정/해제 __( ```ctrl + F9``` )__
+* 모든 중단점 설정 __( ```디버그 텝 메뉴 확인``` )__
+* 모든 중단점 해제 __( ```디버그 탭 메뉴 확인``` )__
+* 모든 중단점 삭제 __( ```ctrl + shift + F9``` )__
+
+
+#### 조건 (마우스 오른쪽 클릭해서 조건 탭 중 하나)
+
+**조건**  
+중단점에 조건식을 걸 수 있다. (참, 거짓)
+
+**적중 횟수**  
+중단점에 걸리는 횟수를 이용해 중단점이 걸리는 것을 설정할 수 있다. (값 동일, 값이 배라면, 값 보다 크거나 같을 때)
+
+**필터**  
+병렬 프로그램에서 사용 프로세스, 스레드, 컴퓨터 이름을 중단점에 걸렸을 때 출력할 수 있음.
+
+#### 작업
+
+**동작 지정**  
+일반적으로 중단점의 기본 동작은 실행을 중단하는 것입니다. 동작을 지정할 경우 출력 창에 특정 정보를 출력하는 용도로 사용할 수 있습니다. (적중 될 때, 지정을 하지 않을 경우 코드를 실행하며 동작을 실행)
+
+* `$ADDRESS` : 현재 명령
+* `$CALLER` : 이전 함수 이름
+* `$CALLSTACK` : 호출 스택
+* `$FUNCTION` : 현재 함수 이름
+* `$PID`, `$PNAME` : 운영 체제 프로세스의 ID 및 이름을 반환
+* `$TID`, `$TNAME` : 운영 체제 스레드의 ID 및 이름을 반환
+
+
+
+## 11.20
+
+* IFC Geometry Converter
+  * 테스트 코드 작성
+* Clean Code
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* 사내 Doc
+* Analytics Line
+* cpp17 Varient
+
