[11.20][Add] 오늘 공부한 것 추가

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -255,7 +255,28 @@
 * IFC Geometry Converter
 * Install Shield
 * Clean Code
-* 사내 Doc
 * Analytics Line
 * cpp17 Varient
+
+
+<br/>
+
+### 디버깅
+
+**어떤 자료 구조의 생성과 소멸을 한 곳에서 관리해야 하는 이유...**  
+소멸되서는 안 될 어떤 자료가 소멸됐다. 알아내기 위해 소멸하는 곳을 찾아가 조건부 중단점을 사용해서 바로 해결할 수 있었다!!
+
+<br/>
+
+### static singleton shared_ptr -> 상속
+
+static으로 선언됐기 때문에 ptr이 계속 살아있는다.  
+해당 선언부의 소멸자에서 reset을 시켜주도록 하자.
+
+
+<br/>
+
+### CIM TransAction -> PPT
+
+각종 정리 ppt 자료 참고
 
