[#noissue] Update commit rule - commit message rule 추가

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -280,3 +280,21 @@ static으로 선언됐기 때문에 ptr이 계속 살아있는다.
 
 각종 정리 ppt 자료 참고
 
+
+
+
+## 11.21
+
+* IFC Geometry Converter
+  * 테스트 코드 작성
+* Clean Code
+* [Commit Message Rule](/contents/commit.md)
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* Analytics Line
+* cpp17 Varient
