[#noissue] Update studying today

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -287,7 +287,6 @@ static으로 선언됐기 때문에 ptr이 계속 살아있는다.
 
 * IFC Geometry Converter
   * 테스트 코드 작성
-* Clean Code
 * [Commit Message Rule](/contents/commit.md)
 
 
@@ -298,3 +297,39 @@ static으로 선언됐기 때문에 ptr이 계속 살아있는다.
 * Clean Code
 * Analytics Line
 * cpp17 Varient
+
+
+### CWaitCursor wait;
+
+* 그냥 선언하고, wait.Restore() 사이가 바로 모래시계 모양이 됨
+
+~~~
+CWaitCursor wait;
+wait.Restore();
+~~~
+
+
+
+
+
+## 11.21
+
+* IFC Geometry Converter
+  * 으아 1DMember 거의 완성해간다~
+  * Refactoring
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* Analytics Line
+* cpp17 Varient
+
+
+### Test Code
+
+진짜 Test Code는 중요하다!  
+Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.  
+혼자 개발을 할 시에도 꼭 Test Code를 짜도록 하자!
