[#noissue] Update studying today

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -312,7 +312,7 @@ wait.Restore();
 
 
 
-## 11.21
+## 11.22
 
 * IFC Geometry Converter
   * 으아 1DMember 거의 완성해간다~
@@ -333,3 +333,59 @@ wait.Restore();
 진짜 Test Code는 중요하다!  
 Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.  
 혼자 개발을 할 시에도 꼭 Test Code를 짜도록 하자!
+
+
+
+
+
+## 11.23
+
+* IFC Geometry Converter
+  * 1D Member
+  * Refactoring
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future
+* Cpp17
+  * apply
+  * optional
+  * variant
+  * any
+  * string_view
+
+
+<br/>
+<hr/>
+
+
+## 11.26
+
+* IFC Geometry Converter
+  * 1D Member
+  * Refactoring
+* Cpp17
+  * optional
+  * variant
+  * any
+  * string_view
+
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future
+
+
