[#noissue] Update studying today

--- a/contents/2018.11/11.md
+++ b/contents/2018.11/11.md
@@ -389,3 +389,24 @@ Refactoring을 하는데 검증의 수단으로서 정말 너무 유용하다.
   * async future
 
 
+
+
+## 11.27
+
+* IFC Geometry Converter
+  * 1D Member
+  * Refactoring
+* Feature Solid
+
+### 해야 할 것
+
+* IFC Geometry Converter
+* Install Shield
+* Clean Code
+* Analytics Line
+* Cpp Basic
+  * Thread
+  * async future
+* Cpp17
+  * filesystem
+
